--- a/SECRETS.ENV
+++ b/SECRETS.ENV
@@ -1,3 +1,3 @@
 
-export KEY ="AKIAJ2M57AOPWD4VQNJQ";
-export SECRET="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";
+export KEY ="AKIAJ3G4J6EHBGBZ2JEQ";
+export SECRET="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";
